--- a/app.json
+++ b/app.json
@@ -15,13 +15,33 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.grawat.realestate",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "googleServicesFile": "./expoestate-2bb34-firebase-adminsdk-ryl6t-a3af72a685.json",
+
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "78bd2144-c4c7-48eb-8121-11ac5d92aacf"
+      }
     }
   }
 }
